--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,8 @@
         "valarray": "c",
         "benchmarks_deploy_gem5.h": "c",
         "benchmarks_deploy.h": "c",
-        "time.h": "c"
+        "time.h": "c",
+        "*.inc": "cpp",
+        "calcular-primos-gem5.h": "c"
     }
 }
